@@ -24,7 +24,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Stream;
 
-import com.google.common.collect.ImmutableSet;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -108,20 +107,20 @@ class TokenRangeTest
     }
 
     @Test
-    void testOverlaps()
+    void testIntersects()
     {
         TokenRange r1 = new TokenRange(3, 5);
         TokenRange r2 = new TokenRange(1, 10);
         TokenRange r3 = new TokenRange(10, 11);
         TokenRange r4 = new TokenRange(4, 11);
-        assertThat(r1.overlaps(r2)).isTrue();
-        assertThat(r2.overlaps(r1)).isTrue();
-        assertThat(r3.overlaps(r4)).isTrue();
-        assertThat(r4.overlaps(r3)).isTrue();
-        assertThat(r2.overlaps(r4)).isTrue();
-        assertThat(r4.overlaps(r2)).isTrue();
-        assertThat(r2.overlaps(r3)).isFalse();
-        assertThat(r3.overlaps(r2)).isFalse();
+        assertThat(r1.intersects(r2)).isTrue();
+        assertThat(r2.intersects(r1)).isTrue();
+        assertThat(r3.intersects(r4)).isTrue();
+        assertThat(r4.intersects(r3)).isTrue();
+        assertThat(r2.intersects(r4)).isTrue();
+        assertThat(r4.intersects(r2)).isTrue();
+        assertThat(r2.intersects(r3)).isFalse();
+        assertThat(r3.intersects(r2)).isFalse();
     }
 
     @Test
@@ -154,52 +153,52 @@ class TokenRangeTest
     }
 
     @ParameterizedTest(name = "{index} - {0}: inputLeft={1} inputRight={2} expectedLeft={3} expectedRight={4}")
-    @MethodSource("inputAndExpectedResultAfterDiff")
-    void testDiff(String testTitle, Set<TokenRange> left, Set<TokenRange> right, Set<TokenRange> expectedLeft, Set<TokenRange> expectedRight)
+    @MethodSource("inputAndExpectedResultAfterSymmetricDiff")
+    void testSymmetricDiff(String testTitle, Set<TokenRange> left, Set<TokenRange> right, Set<TokenRange> expectedLeft, Set<TokenRange> expectedRight)
     {
-        TokenRange.Pair diff = TokenRange.diff(left, right);
-        assertThat(diff.left).isEqualTo(expectedLeft);
-        assertThat(diff.right).isEqualTo(expectedRight);
+        TokenRange.SymmetricDiffResult symmetricDiffResult = TokenRange.symmetricDiff(left, right);
+        assertThat(symmetricDiffResult.onlyInLeft).isEqualTo(expectedLeft);
+        assertThat(symmetricDiffResult.onlyInRight).isEqualTo(expectedRight);
 
         // exchange left and right; it is to test the commutative property of diff
-        diff = TokenRange.diff(right, left);
-        assertThat(diff.left).isEqualTo(expectedRight);
-        assertThat(diff.right).isEqualTo(expectedLeft);
+        symmetricDiffResult = TokenRange.symmetricDiff(right, left);
+        assertThat(symmetricDiffResult.onlyInLeft).isEqualTo(expectedRight);
+        assertThat(symmetricDiffResult.onlyInRight).isEqualTo(expectedLeft);
     }
 
-    public static Stream<Arguments> inputAndExpectedResultAfterDiff()
+    public static Stream<Arguments> inputAndExpectedResultAfterSymmetricDiff()
     {
         return Stream.of(
         //  inputLeft, inputRight, expectedLeft, expectedRight
         args("Diff on identical sets",
-             ImmutableSet.of(r(0, 1000), r(1000, 2000)), // inputLeft
-             ImmutableSet.of(r(0, 2000)), // inputRight
-             ImmutableSet.of(), // expectedLeft
-             ImmutableSet.of()), // expectedRight
+             Set.of(r(0, 1000), r(1000, 2000)), // inputLeft
+             Set.of(r(0, 2000)), // inputRight
+             Set.of(), // expectedLeft
+             Set.of()), // expectedRight
 
         args("Diff on enclosing sets",
-             ImmutableSet.of(r(0, 1000), r(1000, 2000)), // inputLeft
-             ImmutableSet.of(r(1000, 2000)), // inputRight
-             ImmutableSet.of(r(0, 1000)), // expectedLeft
-             ImmutableSet.of()), // expectedRight
+             Set.of(r(0, 1000), r(1000, 2000)), // inputLeft
+             Set.of(r(1000, 2000)), // inputRight
+             Set.of(r(0, 1000)), // expectedLeft
+             Set.of()), // expectedRight
 
         args("Diff on overlapping sets",
-             ImmutableSet.of(r(0, 1000), r(1000, 2000)), // inputLeft
-             ImmutableSet.of(r(500, 1500), r(2000, 2500)), // inputRight
-             ImmutableSet.of(r(0, 500), r(1500, 2000)), // expectedLeft
-             ImmutableSet.of(r(2000, 2500))), // expectedRight
+             Set.of(r(0, 1000), r(1000, 2000)), // inputLeft
+             Set.of(r(500, 1500), r(2000, 2500)), // inputRight
+             Set.of(r(0, 500), r(1500, 2000)), // expectedLeft
+             Set.of(r(2000, 2500))), // expectedRight
 
         args("Diff on disjoint ranges",
-             ImmutableSet.of(r(0, 1000)), // inputLeft
-             ImmutableSet.of(r(2000, 2500)), // inputRight
-             ImmutableSet.of(r(0, 1000)), // expectedLeft
-             ImmutableSet.of(r(2000, 2500))), // expectedRight
+             Set.of(r(0, 1000)), // inputLeft
+             Set.of(r(2000, 2500)), // inputRight
+             Set.of(r(0, 1000)), // expectedLeft
+             Set.of(r(2000, 2500))), // expectedRight
 
         args("Diff on overlapping singleton sets",
-             ImmutableSet.of(r(0, 1000)), // inputLeft
-             ImmutableSet.of(r(500, 1500)), // inputRight
-             ImmutableSet.of(r(0, 500)), // expectedLeft
-             ImmutableSet.of(r(1000, 1500))) // expectedRight
+             Set.of(r(0, 1000)), // inputLeft
+             Set.of(r(500, 1500)), // inputRight
+             Set.of(r(0, 500)), // expectedLeft
+             Set.of(r(1000, 1500))) // expectedRight
         );
     }
 
